--- a/src/Page/CardPage/CardPage.css
+++ b/src/Page/CardPage/CardPage.css
@@ -1,14 +1,14 @@
-.background{
+.cp_background{
     position: relative;
 }
-.card_label{
+.cp_card_label{
     color: var(--kangar-bold-write);
     font-weight: 600;
     font-size: 12px;
     margin-top: 12px;
     display: block;
 }
-.card_num{
+.cp_card_num{
     background-color: var(--kangar-fade);
     display: flex;
     padding: 12px;
@@ -16,7 +16,7 @@
     gap: 18px;
 }
 
-.card_num > input{
+.cp_card_num > input{
     color: var(--kangar-bold-write);
     font-size: 16px;
     font-style: normal;
@@ -29,15 +29,15 @@
 
 }
 
-.flex{
+.cp_flex{
     display: flex;
     justify-content: space-between;
     gap: 12px
 }
-.inner_div{
+.cp_inner_div{
     width: 100%;
 }
-.inner_div > input{
+.cp_inner_div > input{
     width: 100%;
     background-color: var(--kangar-fade);
     border: none;
@@ -50,7 +50,7 @@
     color: var(--kangar-bold-write);
 }
 
-.card_button{
+.cp_card_button{
     background-color: var(--kangar-blue);
     color: white;
     border: none;
@@ -60,15 +60,15 @@
     font-family: Montserrat;
     margin: 24px 0;
 }
-.card_button:hover{
+.cp_card_button:hover{
     cursor: pointer;
 }
 
-.card_button:disabled{
+.cp_card_button:disabled{
     cursor: not-allowed;
 }
 
-.otp_head{
+.cp_otp_head{
     color: var(--kangar-dark-blue);
     font-family: Montserrat;
     font-size: 20px;
@@ -79,7 +79,7 @@
     margin: 50px 0 16px 0;
 }
 
-.otp_sub_text{
+.cp_otp_sub_text{
     color: var(--kangar-dark-blue);
     text-align: center;
     font-family: Montserrat;
@@ -91,13 +91,13 @@
     margin-bottom: 24px;
 }
 
-.otp_div{
+.cp_otp_div{
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
 }
-.otp_div > input {
+.cp_otp_div > input {
     width: 40px;
     color: var(--kangar-dark-blue);
     border: none;
