--- a/src/components/FinalStatus/FinalStatus.css
+++ b/src/components/FinalStatus/FinalStatus.css
@@ -1,15 +1,15 @@
-.img_container{
+.fs_img_container{
     padding: 40px;
     align-items: center;
     justify-content: center;
 }
-.img{
+.fs_img{
     width: 97px;
     display: block;
     margin: auto;
     margin-bottom: 27px;
 }
-.h3{
+.fs_h3{
     color: #0E1437;
     font-family: Montserrat, Inter, sans-serif;
     font-size: 24px;
@@ -22,7 +22,7 @@
     margin-right: auto;
 }
 
-.p{
+.fs_p{
     color: var(--kangar-bold-write);
     font-size: 14px;
     font-weight: 500;
@@ -32,7 +32,7 @@
 }
 
 
-.flex{
+.fs_flex{
     display: flex;
     align-items: center;
     gap: 10px;
@@ -43,11 +43,11 @@
     line-height: 14px;
 }
 
-.option_ul{
+.fs_option_ul{
     list-style: none;
     padding: 20px;
 }
-.option_ul > li{
+.fs_option_ul > li{
     cursor: pointer;
     padding: 12px;
     margin-bottom: 12px;
