--- a/src/components/OrderSummary/OrderSummary.css
+++ b/src/components/OrderSummary/OrderSummary.css
@@ -1,11 +1,11 @@
 
-.order_title{
+.os_order_title{
     color: var(--kangar-bold-write);
     font-weight: 600;
     font-size: 12px;
 }
 
-.order_ul{
+.os_order_ul{
     width: 100%;
     list-style: none;
     margin-top: 8px;
@@ -28,7 +28,7 @@
     justify-content: center;
 }
 
-.order_ul > li {
+.os_order_ul > li {
     display: flex;
     justify-content: space-between;
     font-family: Inter, sans-serif;
@@ -37,7 +37,7 @@
     margin-bottom: 4px;
     color: var(--kangar-description-write);
 }
-.bold_span{
+.os_bold_span{
     color: var(--outside-blue);
     font-size: 20px;
     font-weight: 600;
