--- a/src/components/PaymentOptions/PaymentOptions.css
+++ b/src/components/PaymentOptions/PaymentOptions.css
@@ -1,11 +1,11 @@
-.option_title{
+.po_option_title{
     color: var(--kangar-bold-write);
     font-weight: 600;
     font-size: 12px;
     margin-bottom: 8px;
 }
 
-.choice{
+.po_choice{
     background-color: var(--kangar-fade);
     display: flex;
     align-items: center;
@@ -14,10 +14,10 @@
     cursor: pointer;
 }
 
-.all_option{
+.po_all_option{
     border-radius: 5px;
 }
-.flex{
+.po_flex{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -29,11 +29,11 @@
     line-height: 14px;
 }
 
-.option_ul{
+.po_option_ul{
     list-style: none;
     padding: 12px;
 }
-.option_ul > li{
+.po_option_ul > li{
     cursor: pointer;
     padding-bottom: 12px;
     margin-bottom: 12px;
@@ -41,7 +41,7 @@
     justify-content: start;
     align-items: center;
 }
-.option_ul > li:hover{
+.po_option_ul > li:hover{
     border-bottom: solid 1px var(--kangar-ash);
     padding-bottom: 11px;
     margin-bottom: 12px;
