modifying the files to base64 strings

--- a/src/Page/CardPage/CardPage.css
+++ b/src/Page/CardPage/CardPage.css
@@ -29,6 +29,11 @@
 
 }
 
+.cp_card_img{
+    width: 12px;
+    height: 14px;
+}
+
 .cp_flex{
     display: flex;
     justify-content: space-between;
